<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".new_customer.presentation.NewCustomerFragment">



    <LinearLayout
        android:id="@+id/linearLayout_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Назад"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Врач"
            android:textSize="@dimen/text_size_22" />

    </LinearLayout>

    <View
        android:id="@+id/bottom_nav_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6E8EB"
        app:layout_constraintBottom_toTopOf="@id/linearLayout_body_new_doctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_body_new_doctor"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_header">

        <TextView
            android:id="@+id/textView_new_doctor"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/full_name"
            android:textSize="@dimen/text_size_22" />

        <EditText
            android:id="@+id/editText_new_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="text" />

    </LinearLayout>

    <View
        android:id="@+id/bottom_nav_separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6E8EB"
        app:layout_constraintBottom_toTopOf="@id/linearLayout_body_clinic_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_body_clinic_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_body_new_doctor">

        <TextView
            android:id="@+id/textView_clinic_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:maxLines="@android:integer/config_longAnimTime"
            android:textAlignment="center"
            android:text="@string/clinic_name"
            android:textSize="@dimen/text_size_18" />

<Spinner
    android:id="@+id/spinner_clinic_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="0.45"
    android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:id="@+id/bottom_nav_separator3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6E8EB"
        app:layout_constraintBottom_toTopOf="@id/linearLayout_body_doctor_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_body_doctor_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_body_clinic_name">

        <TextView
            android:id="@+id/textView_doctor_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_18" />

        <EditText
            android:id="@+id/editText_doctor_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>